namespace.yml
apiVersion: certmanager.k8s.io/disable-validation=true
kind: Namespace
metadata:
  name: cert-manager
