deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2020-04-07T05:58:59Z"
  generation: 2
  labels:
    app: ticket-app-dev
  name: ticket-app-dev
  namespace: default
  resourceVersion: "10344"
  selfLink: /apis/apps/v1/namespaces/default/deployments/ticket-app-dev
  uid: dffc6656-7894-11ea-b0d6-42010a920041
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ticket-app-dev
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ticket-app-dev
    spec:
      containers:
      - env:
        - name: test
          valueFrom:
            configMapKeyRef:
              key: test
              name: ticket-app-dev-config-ht00
        image: gcr.io/ticket-app-dev-11346/ticket-app-dev@sha256:ae4a214edf22ffb991051688356020b6369e724f4885fd2a9431f8103798f802
        imagePullPolicy: IfNotPresent
        name: ticket-app-dev-sha256-1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2020-04-07T05:59:35Z"
    lastUpdateTime: "2020-04-07T05:59:35Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2020-04-07T05:58:59Z"
    lastUpdateTime: "2020-04-07T05:59:35Z"
    message: ReplicaSet "ticket-app-dev-58b5bf4797" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
