service.yml
apiVersion: v1
kind: Service
metadata:
  name: ticket-app-dev-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: ticket-app-dev
  type: LoadBalancer
