ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: ticket-app-dev
spec:
  tls:
  - secretName: ticket-app-dev-certificate
  backend:
    serviceName: ticket-app-dev-service
    servicePort: 80
